@@ -1,5 +1,11 @@
 2005-02-01 Akihiro Mizutani <mizutani@net-chef.net>
 
+	* bgp_attr.c, bgp_snmp.c, bgp_vty.c, bgpd.[ch]: Remove support for old
+	  draft - ie. "neighbor version 4-" commands. Preserve dummy "neighbor
+	  version" command as deprecated.
+
+2005-02-01 Akihiro Mizutani <mizutani@net-chef.net>
+
 	* bgpd.[ch], bgp_vty.c, bgp_route.c: "Restart session after
 	  maximum-prefix limit" feature support.
 
